fix spinner on tablet/smartphone

--- a/src/css/plugin_lightbox.less
+++ b/src/css/plugin_lightbox.less
@@ -28,13 +28,21 @@
     border-radius: 50%;
 }
 
+.spinner-loading.spinner-absolute
+{
+    position: absolute;
+}
+.spinner-loading.spinner-fixed
+{
+    position: fixed;
+}
+
 .spinner-loading
 {
     width: 2.5em; /* 40 */
     height: 2.5em; /* 40 */
     background-color: #444;
     background-color: rgba( 0, 0, 0, .5 );
-    position: fixed;
     z-index: 10003;
     top: 50%;
     left: 50%;
